[gd_scene load_steps=7 format=2]

[ext_resource path="res://stuff/Player.gd" type="Script" id=1]
[ext_resource path="res://art/colored_packed.png" type="Texture" id=2]
[ext_resource path="res://font/Font.tres" type="DynamicFont" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0, 0, 0, 0 )
draw_center = false

[node name="Player" type="KinematicBody2D" groups=[
"Mover",
"Player",
]]
z_index = 1
collision_layer = 2
collision_mask = 1025
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 8, 8 )
current = true
zoom = Vector2( 0.5, 0.5 )
editor_draw_screen = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 8 )
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="InteractLabel" type="Label" parent="HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -15.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapLabel" type="Label" parent="HUD"]
anchor_left = 0.05
anchor_right = 0.95
margin_left = -3.2
margin_right = -3.20001
margin_bottom = 104.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLog" type="Label" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 24.0
margin_right = -8.0
margin_bottom = -224.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
